--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 
                 <form action="mailto:tomerzhr@gmail.com" method="post">
                     <label for="fullName">שם מלא</label>
-                    <input type="text" name="fullName" id="fullName">
+                    <input type="text" id="fullName" id="fullName" required>
                     <label for="emailAddress">אימייל</label>
-                    <input type="email" name="emailAddress" id="emailAddress">
+                    <input type="email" id="emailAddress" id="emailAddress" required>
 
                     <div class="btnAria">
                         <button type="submit">שליחה</button>
