--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main class="mainContent">
 
         <section class="photoSide">
-            <img src="img/Chaiser.png" alt="">
+            <img src="img/Chaiser.png" alt="chaiser photo">
         </section>
 
         <section class="contactSide">
