--- a/index.html
+++ b/index.html
@@ -1,48 +1,41 @@
 <!DOCTYPE html>
 <html lang="he" dir="rtl">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="הפאב הטוב ביותר שתבלו בו והכל במקום אחד במרחק צעד אחד וכולו בחינם!">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="הפאב הטוב ביותר שתבלו בו והכל במקום אחד במרחק צעד אחד וכולו בחינם!" />
     <title>תנו לנו להזמין אתכם לצ׳ייסר.</title>
-    <link rel="stylesheet" href="main.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100;300;500;700&display=swap" rel="stylesheet">
-</head>
+    <link rel="stylesheet" href="main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100;300;500;700&display=swap" rel="stylesheet" />
+  </head>
 
-<body>
+  <body>
     <main class="mainContent">
+      <section class="photoSide">
+        <img src="img/Chaiser.png" alt="chaiser photo" />
+      </section>
 
-        <section class="photoSide">
-            <img src="img/Chaiser.png" alt="chaiser photo">
-        </section>
+      <section class="contactSide">
+        <div class="content">
+          <h1>תנו לנו להזמין אתכם <span>לצ׳ייסר</span></h1>
 
-        <section class="contactSide">
+          <p>לקבלת קופון לצייסר חינם יש למלא את הפרטים</p>
 
-            <div class="content">
+          <form action="mailto:tomerzhr@gmail.com" class="form-field" name="form-field">
+            <label for="fullName">שם מלא</label>
+            <input type="text" id="fullName" required />
+            <label for="email">אימייל</label>
+            <input type="email" id="email" autocomplete="address-level1" required />
 
-                <h1>תנו לנו להזמין אתכם <span>לצ׳ייסר</span></h1>
-
-                <p>לקבלת קופון לצייסר חינם יש למלא את הפרטים</p>
-
-                <form action="mailto:tomerzhr@gmail.com" method="post">
-                    <label for="fullName">שם מלא</label>
-                    <input type="text" id="fullName" id="fullName" required>
-                    <label for="emailAddress">אימייל</label>
-                    <input type="email" id="emailAddress" id="emailAddress" required>
-
-                    <button type="submit">שליחה</button>
-
-                </form>
-
-            </div>
-
-        </section>
-
+            <button type="submit">שליחה</button>
+          </form>
+          <p class="confirmation-message">פרטייך התקבלו בהצלחה, תודה!</p>
+        </div>
+      </section>
     </main>
-</body>
-
+    <script src="script.js"></script>
+  </body>
 </html>
