--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <label for="email">אימייל</label>
             <input type="email" id="email" autocomplete="address-level1" required />
 
-            <button type="submit">שליחה</button>
+            <button class="formBtn" type="submit">שליחה</button>
           </form>
           <p class="confirmation-message">פרטייך התקבלו בהצלחה, תודה!</p>
         </div>
